<resources>
    <string name="app_name">agendaApp</string>
    <string name="tituloApp">Agenda</string>
    <string name="labelCodigo">Código</string>
    <string name="labelAssunto">Assunto</string>
    <string name="labelData">Data</string>
    <string name="labelDescricao">Descrição</string>
    <string name="botaoInserir">Inserir</string>
    <string name="bemVindo">Bem Vindo!!!</string>
    <string name="botaoCadastrar">Cadastrar</string>
    <string name="botaoConsultar">Consultar</string>
    <string name="excluir">Excluir</string>
    <string name="editar">Editar</string>
</resources>